change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zctod_wechat",
+  "name": "@zctod/wechat",
   "version": "1.0.0",
   "description": " WeChat components",
   "main": "index.js",
